# ratcraftia-rgov

./: .gitignore  Caddyfile  RCS  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  db.py  main.py  migrations.py  models.py  public_api.py  rcs.py  schemas.py
backend/app/core/: __init__.py  config.py  dev_vapid_private.pem  security.py
backend/app/routers/: __init__.py  admin.py  auth.py  developer.py  did.py  external_auth.py  laws.py  mail.py  news.py  notifications.py  parliament.py  ratubles.py  referenda.py
backend/app/services/: __init__.py  bootstrap.py  external_auth.py  notifications.py  oauth.py  permissions.py  portal.py
backend/tests/: test_governance.py  test_notifications.py  test_ratubles.py  test_smoke.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pubspec.yaml  vite.config.ts
frontend/lib/: main.dart
frontend/lib/src/: app.dart
frontend/lib/src/core/: ui.dart
frontend/lib/src/screens/: login_screen.dart  portal_pages.dart  portal_screen.dart
frontend/lib/src/services/: api_client.dart  push_notification_service_stub.dart  push_notification_service_web.dart
frontend/public/: push-service-worker.js
frontend/src/: App.tsx  main.tsx  theme.ts  types.ts
frontend/src/components/: LoginScreen.tsx  common.tsx
frontend/src/lib/: api.ts  format.ts  permissions.ts  push.ts
frontend/web/: index.html  manifest.json  push_service_worker.js
frontend/web/push/: push_client.js
(+9 files in other folders)
