[project]
name = "rgov-backend"
version = "0.1.0"
description = "RGOV - Ratcraftia Government Web Portal backend"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.116.1",
  "PyJWT>=2.10.1",
  "passlib>=1.7.4",
  "psycopg[binary]>=3.2.9",
  "pywebpush>=2.0.1",
  "python-multipart>=0.0.20",
  "sqlmodel>=0.0.27",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
